# eigen-matrixq-proposal

./: CMakeLists.txt  README.md  bench.cpp  bench_ggael.cpp  random_matrix.hpp  verify.cpp
